Convert JUnit 4 tests to JUnit 5
* Convert remaining JUnit 4 tests to JUnit 5
* Remove junit 4.x from build.gradle
* Minor javadoc fix in WaitStrategies (order of @param tags was wrong)

Closes #5